# gemian-lock

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  gemian-lock.1
cmake/: FindEV.cmake
debian/: changelog  control  copyright  gemian-lock.manpages  rules
src/: CMakeLists.txt  call_control_event_sink.cpp  call_control_event_sink.h  clock.cpp  clock.h  config.h.in  connman_control.cpp  connman_control.h  dbus_connection_handle.cpp  dbus_connection_handle.h  dbus_message_handle.cpp  dbus_message_handle.h  default.7z  gemian-lock.cpp  gemian-lock.h  lock_active_event_sink.cpp  lock_active_event_sink.h  org.thinkglobally.Gemian.PowerButton.xml  org.thinkglobally.Gemian.SilverButton.xml  org.thinkglobally.Gemian.UserActivity.xml  org.thinkglobally.Gemian.conf  power_button_event_sink.cpp  power_button_event_sink.h  randr.cpp  randr.h  scoped_dbus_error.h  silver_button_event_sink.cpp  silver_button_event_sink.h  torch_control_event_sink.cpp  torch_control_event_sink.h  unlock_indicator.cpp  unlock_indicator.h  user_activity_event_sink.cpp  user_activity_event_sink.h  user_activity_type.h  xcb.cpp  xcb.h
